--- a/downstream/modules/platform/ref-enabling-automation-hub-collection-and-container-signing.adoc
+++ b/downstream/modules/platform/ref-enabling-automation-hub-collection-and-container-signing.adoc
@@ -7,7 +7,7 @@
 = Enabling {HubNameStart} collection and container signing
 
 [role="_abstract"]
-Automation hub allows you to sign ansible collections and container images. This feature is not enabled by default, and you will need to provide the GPG key.
+Automation hub allows you to sign ansible collections and container images. This feature is not enabled by default, and you must provide the GPG key.
 
 ----
 hub_collection_signing=true
@@ -16,7 +16,7 @@ hub_container_signing=true
 hub_container_signing_key=/full/path/to/containers/gpg/key
 ----
 
-When the GPG key is protected by a passphrase, you will need to provide the passphrase.
+When the GPG key is protected by a passphrase, you must provide the passphrase.
 
 ----
 hub_collection_signing_pass=<collections gpg key passphrase>
