--- a/downstream/attributes/attributes.adoc
+++ b/downstream/attributes/attributes.adoc
@@ -134,3 +134,167 @@
 // Linux platforms
 :RHEL: Red Hat Enterprise Linux
 
+ifdef::gw-side-a[]
+// Side A Gateway Menu selections
+
+// Eventually the following will control these settings for all appropriate components
+:menu_ac-projects: menu:Projects[]
+:menu_eda-projects: menu:Projects[]
+:menu_ac-credentials: menu:Access[Credentials]
+:menu_eda-credentials: menu:Access[Credentials]
+:menu_ac-execution-env: menu:Automation Execution[Execution Environments]
+:menu_ah-execution-env: menu:Automation Execution[Execution Environments]
+
+
+// Automation Execution (aka automation controller menu items)
+:menu_jobs: menu:Automation Execution[Jobs]
+:menu_templates: menu:Automation Execution[Templates]
+:menu_schedules: menu:Automation Execution[Schedules]
+
+// Automation Decisions (aka event driven automation menu selections)
+:menu_rule-audit: menu:Automation Decisions[Rule Audit]
+:menu_rulebook-activations: menu:Automation Decisions[Rulebook Activations]
+:menu_decision-environments: Automation Decisions[Decision Environments]
+
+// Automation Infrastructure
+:menu_infrastructure-topology: menu:Automation Infrastructure [Topology View]
+:menu_infrastructure-instance-groups: menu:Automation Infrastructure[Instance Groups]
+:menu_infrastructure-instances: menu:Automation Infrastructure[Instances]
+:menu_infrastructure-inventories: menu:Automation Infrastructure[Inventories]
+:menu_infrastructure-hosts: menu:Automation Execution[Infrastructure > Hosts]
+
+// Automation Content (aka automation hub menu selections)
+:menu_namespaces: menu:Automation Content[Namespaces]
+:menu_collections: menu:Automation Content[Collections]
+:menu_api-token: menu:Automation Hub[Access > API Token]
+
+// Automation Analytics menu selections
+:menu_reports: menu:Automation Analytics[Reports]
+:menu_savings-plan: menu:Automation Analytics[Savings Planner]
+:menu_automation-calc: menu:Automation Analytics[Automation Calculator]
+:menu_org-status: menu:Automation Analytics[Organization Status]
+:menu_job-explorer: menu:Automation Analytics[Job Explorer]
+:menu_administration-activity-stream: menu:Automation Analytics[Activity Stream]
+:menu_host-metrics: menu:Automation Analytics[Host Metrics]
+:menu_clusters: menu:Automation Analytics[Clusters]
+
+// Ansible Lightspeed
+:menu_seat-management: menu:Ansible Lightspeed[Seat Management]
+
+// Utilities menu selections
+:menu_access-stream: menu:Utilities[Access Stream]
+:menu_signature-keys: menu:Utilities[Signature Keys]
+:menu_repositories: menu:Utilities[Repositories]
+:menu_remotes: menu:Utilities[Remotes]
+:menu_remote-repositories: menu:Utilities[Remote Repositories]
+:menu_remote-registries: Automation Hub[Automation Content > Remote Registries]
+:menu_task-management: menu:Utilities[Task Management]
+:menu_notifications: menu:Utilities[Notification]
+:menu_notifiers: menu:Utilities[Notifiers]
+:menu_management-jobs: menu:Utilities[Management Jobs]
+:menu_applications: menu:Utilities[Applications]
+:menu_credential-types: menu:Utilities[Credential Types]
+:menu_subscription: menu:Utilities[Subscription]
+:menu_auth-types: menu:Utilities[Authentication Types]
+
+
+// Access menu selections
+:menu_organizations: menu:Access[Organizations]
+:menu_teams: menu:Access[Teams]
+:menu_users: menu:Access[Users]
+:menu_roles: menu:Access[Roles]
+:menu_credentials: menu:Access[Credentials]
+:menu_authentication: menu:Access[Authentication]
+
+// Global Settings menu selections
+:menu_login-settings: menu:Access[Log In Settings]
+:menu_jobs-settings: menu:Access[Jobs Settings]
+:menu_system-settings: menu:Access[System Settings]
+:menu_ui-settings: menu:Access[User Interface Settings]
+:menu_license-settings: menu:Access[License Settings]
+
+endif:gw-side-a[]
+
+ifdef::gw-sideb[]
+// Side B Gateway Menu selections
+:menu_ac-projects: menu:Automation Controller[Resources > Projects]
+:menu_eda-projects: menu:Event-Driven Ansible[Resources > Projects]
+:menu_ac-credentials: menu:Automation Controller[Resources > Credentials]
+:menu_eda-credentials: menu:Event-Driven Ansible[Resources > Credentials]
+
+// Automation Execution (aka automation controller menu items)
+:menu_jobs: menu:Automation Controller[Views > Jobs]
+:menu_templates: menu:Automation Controller[Resources > Templates]
+:menu_schedules: menu:Automation Controller[Views > Schedules]
+:menu_ac-execution-env: menu:Automation Controller[Administration > Execution Environments]
+
+// Automation Decisions (aka event driven automation menu selections)
+:menu_rule-audit: menu:Automation Decisions[Views > Rule Audit]
+:menu_rulebook-activations: menu:Automation Decisions[Views > Rulebook Activations]
+:menu_decision-environments: Automation Decisions[Resources > Decision Environments]
+
+// Automation Infrastructure
+:menu_infrastructure-topology: menu:Automation Controller[Resources > Topology View]
+:menu_infrastructure-instance-groups: menu:Automation Controller[Resources > Instance Groups]
+:menu_infrastructure-instances: menu:Automation Controller[Administration > Instances]
+:menu_infrastructure-inventories: menu:Automation Controller[Resources > Inventories]
+:menu_infrastructure-hosts: menu:Automation Controller[Administration > Hosts]
+
+// Automation Content (aka automation hub menu selections)
+:menu_namespaces: menu:Automation Hub[Automation Content > Namespaces]
+:menu_collections: menu:Automation Hub[Automation Content > Collections]
+:menu_ah-execution-env: menu:Automation Hub[Automation Content > Execution Environments]
+:menu_api-token: menu:Automation Hub[Access > API Token]
+
+// Automation Analytics menu selections
+:menu_reports: menu:Automation Analytics[Reports]
+:menu_savings-plan: menu:Automation Analytics[Savings Planner]
+:menu_automation-calc: menu:Automation Analytics[Automation Calculator]
+:menu_org-status: menu:Automation Analytics[Organization Status]
+:menu_job-explorer: menu:Automation Analytics[Job Explorer]
+:menu_administration-activity-stream: menu:Automation Controller[Views > Activity Stream]
+:menu_host-metrics: menu:Automation Analytics[Host Metrics]
+:menu_clusters: menu:Automation Analytics[Clusters]
+
+
+// Ansible Lightspeed
+:menu_seat-management: menu:Ansible Lightspeed[Seat Management]
+
+// Utilities menu selections
+:menu_access-stream: menu:Utilities[Access Stream]
+:menu_signature-keys: menu:Automation Hub[Automation Content > Signature Keys]
+:menu_repositories: menu:Automation Hub[Automation Content > Repositories]
+:menu_remotes: menu:Automation Hub[Automation Content > Remotes]
+:menu_remote-registries: Automation Hub[Automation Content > Remote Registries]
+:menu_remote-repositories: menu:Utilities[Remote Repositories]
+:menu_task-management: menu:Automation Hub[Automation Content > Tasks]
+:menu_notifications: menu:Automation Controller[Resources > Notification]
+:menu_notifiers: menu:Utilities[Notifiers]
+:menu_management-jobs: menu:Automation Controller[Resources > Management Jobs]
+:menu_applications: menu:Automation Controller[Resources > Applications]
+:menu_credential-types: menu:Automation Controller[Administration > Credential Types]
+:menu_subscription: menu:Utilities[Subscription]
+:menu_auth-types: menu:Utilities[Authentication Types]
+
+
+// Access menu selections
+:menu_organizations: menu:Access[Organizations]
+:menu_teams: menu:Access[Teams]
+:menu_users: menu:Access[Users]
+:menu_roles: menu:Access[Roles]
+:menu_authentication: menu:Access[Authentication]
+
+// Global Settings menu selections
+:menu_login-settings: menu:Access[Log In Settings]
+:menu_jobs-settings: menu:Access[Jobs Settings]
+:menu_system-settings: menu:Access[System Settings]
+:menu_ui-settings: menu:Access[User Interface Settings]
+:menu_license-settings: menu:Access[License Settings]
+
+endif::gw-sideb[]
+
+ifdef::non-gw[]
+// Non-Gatway menu selections
+
+
+endiff::non-gw[]
