--- a/downstream/modules/builder/con-building-definition-file.adoc
+++ b/downstream/modules/builder/con-building-definition-file.adoc
@@ -2,11 +2,9 @@
 
 = Building a definition file
 
-After you install {Builder}, you can create a definition file that {Builder} uses to create your {ExecEnvNameSing} image. {Builder} makes an {ExecEnvNameSing} image by reading and validating your definition file, then creating a `Containerfile`, and finally passing the `Containerfile` to Podman, which then packages and creates your {ExecEnvNameSing} image. The definition file that you create must be in `yaml` format and contain different sections. The default definition filename, if not provided, is `execution-environment.yml`.
+After you install {Builder}, you can create a definition file that {Builder} uses to create your {ExecEnvNameSing} image. {Builder} makes an {ExecEnvNameSing} image by reading and validating your definition file, then creating a `Containerfile`, and finally passing the `Containerfile` to Podman, which then packages and creates your {ExecEnvNameSing} image. The definition file that you create must be in `yaml` format and contain different sections. The default definition filename, if not provided, is `execution-environment.yml`. For more information on the parts of a definition file, see xref:assembly-definition-file-breakdown[Breakdown of definition file content].
 
 The following is an example of a version 3 definition file. Each definition file must specify the major version number of the Ansible Builder feature set it uses. If not specified, {Builder} defaults to version 1, making most new features and definition keywords unavailable.
-
-// ddacosta - there is a Ansible Builder version 3 Porting Guide in progress that discusses the changes from v1/2 to v3. A link should be included to that document once its published.
 
 .Definition file example
 ====
@@ -62,3 +60,4 @@ additional_build_steps: <5>
 [role="_additional-resources"]
 .Additional resources
 * For more information about the definition file content, see xref:assembly-definition-file-breakdown[Breakdown of definition file content].
+* To read more about the differences between {Builder} versions 2 and 3, see the link:https://docs.ansible.com/ansible/latest/porting_guides/porting_guide_3.html[Ansible 3 Porting Guide].
