--- a/downstream/modules/platform/ref-controller-user-teams.adoc
+++ b/downstream/modules/platform/ref-controller-user-teams.adoc
@@ -12,6 +12,6 @@ You cannot modify team membership from this display panel.
 For more information, see xref:assembly-controller-teams[Teams].
 ====
 
-Until you create a team and assign a user to that team, the assigned teams details for that user appears empty.
+Until you create a team and assign a user to that team, the assigned teams details for that user is displayed as empty.
 
 //image:users-teams-list-for-example-user.png[Users - teams list]
