--- a/downstream/modules/platform/proc-connecting-nodes-through-mesh-ingress.adoc
+++ b/downstream/modules/platform/proc-connecting-nodes-through-mesh-ingress.adoc
@@ -46,23 +46,23 @@ Servers should convert recognized schemas to the latest internal value, and migh
 oc get ansible-automation-platform.
 ----
 +
-Additionally you can use:
+//Additionally you can use:
 
-* *external_hostname*: an optional field used for specifying the external hostname defined in an user managed ingress.
-* *external_ipaddress*: an optional field used for specifying the external IP address defined in an user managed ingress
-* *ingress_type*: Ingress type for ingress managed by the operator.
-Where options are:  
-** none (default) 
-** Ingress
-** IngressRouteTCP
-** Route (default when deployed on OpenShift)
-* *ingress_api_version*: the API Version for ingress managed by the operator. 
-This parameter is ignored when `ingress_type=Route`.
-* *ingress_annotations*: annotation on the ingress managed by the operator
-* *ingress_class_name*: the name of ingress class to use instead of the cluster default. 
-This parameter is ignored when `ingress_type=Route`.
-* *ingress_controller*: special configuration for specific Ingress Controllers. 
-This parameter is ignored when `ingress_type=Route`.
+//* *external_hostname*: an optional field used for specifying the external hostname defined in an user managed ingress.
+//* *external_ipaddress*: an optional field used for specifying the external IP address defined in an user managed ingress
+//* *ingress_type*: Ingress type for ingress managed by the operator.
+//Where options are:  
+//** none (default) 
+//** Ingress
+//** IngressRouteTCP
+//** Route (default when deployed on OpenShift)
+//* *ingress_api_version*: the API Version for ingress managed by the operator. 
+//This parameter is ignored when `ingress_type=Route`.
+//* *ingress_annotations*: annotation on the ingress managed by the operator
+//* *ingress_class_name*: the name of ingress class to use instead of the cluster default. 
+//This parameter is ignored when `ingress_type=Route`.
+//* *ingress_controller*: special configuration for specific Ingress Controllers. 
+//This parameter is ignored when `ingress_type=Route`.
 
 . Apply this YAML file using:
 +
