populating module files

--- a/downstream/assemblies/platform/assembly-controller-resource-operator.adoc
+++ b/downstream/assemblies/platform/assembly-controller-resource-operator.adoc
@@ -3,7 +3,7 @@ ifdef::context[:parent-context: {context}]
 :context: performance-considerations
 
 [id="assembly-controller-resource-operator"]
-= Automation Controller Resource Operator
+= {ControllerNameStart} Resource Operator
 
 include::platform/con-controller-resource-operator.adoc[leveloffset=+1]
 include::platform/proc-use-controller-resource-operator.adoc[leveloffset=+1]
