--- a/downstream/modules/platform/proc-add-controller-access-token.adoc
+++ b/downstream/modules/platform/proc-add-controller-access-token.adoc
@@ -1,3 +1,24 @@
 [id="proc-add-controller-access-token_{context}"]
 
 = Adding an {ControllerName} access token
+
+To connect Resource Operator with {ControllerName} you need to create a k8s secret with the connection information for your {ControllerName} instance.
+
+.Procedure
+To create an OAuth2 token for your user in the Automation Controller UI:
+. In the navigation panel, select *Access -> Users*
+. Select the username you wish to create a token for
+. Click on btn:[Tokens], then click btn:[Add]
+. You can leave *Applications* empty. Add a description and select *Read* or *Write* for the *Scope*
+
+Alternatively, you can create a OAuth2 token at the command-line by using the `create_oauth2_token` manage command:
+
+----
+$ controller-manage create_oauth2_token --user example_user
+New OAuth2 token for example_user: j89ia8OO79te6IAZ97L7E8bMgXCON2
+----
+
+[NOTE]
+====
+Make sure you provide a valid user when creating tokens. Otherwise, you will get an error message that you tried to issue the command without specifying a user, or supplying a username that does not exist.
+====
