--- a/downstream/modules/platform/proc-create-a-connection-secret.adoc
+++ b/downstream/modules/platform/proc-create-a-connection-secret.adoc
@@ -1,3 +1,24 @@
 [id="proc-create-connection-secret_{context}"]
 
 = Creating a connection secret
+To make your connection information available to the operator, create a k8s secret with the token and host value. 
+
+.Procedure
+. The following is an example of the YAML for the connection secret. Save the following example to a file, for example, `automation-controller-connection-secret.yml`
++
+----
+apiVersion: v1
+kind: Secret
+metadata:
+  name: controller-access
+  type: Opaque
+stringData:
+  token: <generated-token>
+  host: https://my-controller-host.example.com/
+----
++
+. Edit the file with your host and token value
+. Apply it to your cluster using the `kubectl create` command: 
+----
+kubectl create -f controller-connection-secret.yml
+----
