AAP-24195: Added info. about languages supported for Ansible Lightspeed prompts

--- a/lightspeed/modules/con-lightspeed-about.adoc
+++ b/lightspeed/modules/con-lightspeed-about.adoc
@@ -22,7 +22,7 @@ To use {LightspeedFullName}, your organization must have:
 
 * *Reduces the onboarding learning period for Ansible developers*
 +
-With just a basic understanding of YAML syntax, Ansible developers can use natural language prompts to describe the automation goal. {LightspeedShortName} then offers Ansible code recommendations to help achieve the automation goal more efficiently. This combination of content and best practice suggestions reduces the learning curve and offers a smoother onboarding experience for new Ansible users. 
+With just a basic understanding of YAML syntax, Ansible developers can use natural language prompts in English language to describe the automation goal. {LightspeedShortName} then offers Ansible code recommendations to help achieve the automation goal more efficiently. This combination of content and best practice suggestions reduces the learning curve and offers a smoother onboarding experience for new Ansible users. 
 +
 For example, to get a multitask code recommendation, you can enter the prompt `Install postgresql-server & run postgresql-setup command`. The Ansible Lightspeed service reads the text, interacts with {ibmwatsonxcodeassistant}, and generates code recommendations to automate a multitask that installs a PostgreSQL server and sets up a PostgreSQL database. You can then view and accept the code recommendations to create tasks in an Ansible YAML file. 
 
