--- a/lightspeed/modules/con_lightspeed-key-features.adoc
+++ b/lightspeed/modules/con_lightspeed-key-features.adoc
@@ -12,6 +12,8 @@
 * *Single tasks and multitask generation*
 +
 Using natural language prompts, you can generate single task or multiple task recommendations for Ansible task files and playbooks. To request multitask code recommendations, you can enter a sequence of natural language task prompts in a YAML file comment separated by ampersand (*&*) symbols.
++
+Currently, {LightspeedShortName} supports user prompts in English language only. However, there could be instances where the training data that was used to train the {ibmwatsonxcodeassistant} models included non-English language. In such scenarios, the model can generate code recommendations for prompts made in the same non-English language, but the generated code recommendations might or might not be accurate.
 
 * *Content source matching*
 +
