--- a/lightspeed/modules/con_overview-and-best-practices.adoc
+++ b/lightspeed/modules/con_overview-and-best-practices.adoc
@@ -15,8 +15,14 @@ Write a description of your task in the `- name:` key of a new task line in your
 Place your cursor on a new line in your Ansible YAML file at the correct indentation, and start your prompt with a Pound key (#).
 +
 Write the descriptions of your tasks, separating each prompt by using Ampersand symbols (&). For example, to automate a multitask of installing PostgreSQL server and running the initial PostgreSQL setup command, you can enter the prompt `# Install postgresql-server & run postgresql-setup command`.
-
++
 The Ansible Lightspeed service reads the text, interacts with the {ibmwatsonxcodeassistant} model, and generates Ansible task recommendations based on your natural language prompt.
++
+[NOTE]
++
+====
+Currently, {LightspeedShortName} supports user prompts in English language only. However, there could be instances where the training data that was used to train the {ibmwatsonxcodeassistant} models included non-English language. In such scenarios, the model can generate code recommendations for prompts made in the same non-English language, but the generated code recommendations might or might not be accurate.
+====
 
 * *View the content source matching results*
 +
