--- a/lightspeed/titles/lightspeed-user-guide/master.adoc
+++ b/lightspeed/titles/lightspeed-user-guide/master.adoc
@@ -18,6 +18,7 @@ include::assemblies/assembly_configure-code-assistant.adoc[leveloffset=+1]
 include::assemblies/assembly_logging-in-out-portal.adoc[leveloffset=+1]
 include::assemblies/assembly_configuring-vscode-extension.adoc[leveloffset=+1]
 include::assemblies/assembly_requesting-task-recommendations.adoc[leveloffset=+1]
+include::assemblies/assembly_generating-playbooks.adoc[leveloffset=+1]
 include::assemblies/assembly_using-code-bot-for-suggestions.adoc[leveloffset=+1]
 include::assemblies/assembly_configuring-custom-models.adoc[leveloffset=+1]
 include::assemblies/assembly_managing-admin-dashboard-telemetry.adoc[leveloffset=+1]
