--- a/lightspeed/modules/proc_obtain-config-wca-and-model-id.adoc
+++ b/lightspeed/modules/proc_obtain-config-wca-and-model-id.adoc
@@ -30,5 +30,5 @@ For information about how to obtain an API key and model ID from {ibmwatsonxcode
 When the API key and model ID is successfully validated, {LightspeedShortName} is connected to your {ibmwatsonxcodeassistant} instance.
 
 [role="_additional-resources"]
-== Additional resources
+.Additional resources
 * xref:troubleshooting-lightspeed-config_troubleshooting-lightspeed[Troubleshooting {LightspeedShortName} configuration errors]
