--- a/downstream/attributes/attributes.adoc
+++ b/downstream/attributes/attributes.adoc
@@ -197,7 +197,6 @@
 :MenuControllerOrganizations: menu:{MenuAM}[Organizations]
 :MenuControllerUsers: menu:{MenuAM}[Users]
 :MenuControllerTeams: menu:{MenuAM}[Teams]
-:MenuControllerOAuthApplications: menu:{MenuAM}[OAuth Applications]
 
 // Automation Decisions (aka event driven automation menu selections)
 :MenuADRuleAudit: menu:{MenuAD}[Rule Audit]
@@ -250,7 +249,7 @@
 :MenuAMTeams: menu:{MenuAM}[Teams]
 :MenuAMUsers: menu:{MenuAM}[Users]
 :MenuAMRoles: menu:{MenuAM}[Roles]
-:MenuAEAdminOauthApps: menu:{MenuTopAE}[OAuth Applications]
+:MenuAMAdminOauthApps: menu:{MenuAM}[OAuth Applications]
 :MenuAMCredentials: menu:{MenuAM}[Credentials]
 :MenuAMCredentialType: menu:{MenuAM}[Credential Types]
 
