--- a/downstream/titles/controller/controller-admin-guide/master.adoc
+++ b/downstream/titles/controller/controller-admin-guide/master.adoc
@@ -17,12 +17,12 @@ Written for DevOps engineers and administrators, the {ControllerName} Administra
 //include::aap-common/making-open-source-more-inclusive.adoc[leveloffset=+1]
 include::{DocumentationFeedback}[leveloffset=+1]
 
-include::platform/assembly-controller-licensing.adoc[leveloffset=+1]
+//include::platform/assembly-controller-licensing.adoc[leveloffset=+1]
 include::platform/assembly-ag-controller-start-stop-controller.adoc[leveloffset=+1]
 //Deprecated
 //include::platform/assembly-custom-inventory-scripts.adoc[leveloffset=+1]
 include::platform/assembly-inventory-file-importing.adoc[leveloffset=+1]
-include::platform/assembly-multi-credential-assignment.adoc[leveloffset=+1]
+//include::platform/assembly-multi-credential-assignment.adoc[leveloffset=+1]
 include::platform/assembly-controller-management-jobs.adoc[leveloffset=+1]
 include::platform/assembly-ag-controller-clustering.adoc[leveloffset=+1]
 include::platform/assembly-ag-instance-and-container-groups.adoc[leveloffset=+1]
