--- a/downstream/modules/platform/proc-scm-git-subversion.adoc
+++ b/downstream/modules/platform/proc-scm-git-subversion.adoc
@@ -32,7 +32,7 @@ In addition, to avoid job overflows if jobs are spawned faster than the project 
 For more information, see xref:controller-job-branch-overriding[Job branch overriding].
 +
 image:projects-create-scm-project-branch-override-checked.png[Override options]
-. Click btn:[Save project] to save your project.
+. Click btn:[Save project].
 
 [TIP]
 ====
