--- a/downstream/titles/eda/eda-getting-started-guide/master.adoc
+++ b/downstream/titles/eda/eda-getting-started-guide/master.adoc
@@ -9,7 +9,7 @@ include::attributes/attributes.adoc[]
 
 
 // Book Title
-= Getting Started with Event-Driven Ansible Guide
+= Getting started with event-driven Ansible guide
 
 Thank you for your interest in {EDAname}. {EDAname} is a new way to enhance and expand automation. It helps teams automate decision-making and improve IT speed and agility.
 
