--- a/downstream/titles/dev-guide/master.adoc
+++ b/downstream/titles/dev-guide/master.adoc
@@ -7,7 +7,7 @@ include::attributes/attributes.adoc[]
 
 
 // Book Title
-= Ansible Automation Platform creator guide
+= Red Hat Ansible Automation Platform creator guide
 
 include::{Boilerplate}[]
 
