--- a/downstream/titles/controller/controller-admin-guide/master.adoc
+++ b/downstream/titles/controller/controller-admin-guide/master.adoc
@@ -29,8 +29,8 @@ include::platform/assembly-ag-instance-and-container-groups.adoc[leveloffset=+1]
 include::platform/assembly-controller-instances.adoc[leveloffset=+1]
 include::platform/assembly-controller-topology-viewer.adoc[leveloffset=+1]
 include::platform/assembly-controller-log-files.adoc[leveloffset=+1]
-//Removed because of Lizzi's work.
-//include::platform/assembly-controller-logging-aggregation.adoc[leveloffset=+1]
+//Lizzi's work: Logging removed at 2.5-next
+include::platform/assembly-controller-logging-aggregation.adoc[leveloffset=+1]
 include::platform/assembly-controller-metrics.adoc[leveloffset=+1]
 include::platform/assembly-controller-improving-performance.adoc[leveloffset=+1]
 include::platform/assembly-ag-controller-secret-handling.adoc[leveloffset=+1]
