--- a/downstream/modules/platform/ref-automation-hub-requirements.adoc
+++ b/downstream/modules/platform/ref-automation-hub-requirements.adoc
@@ -24,7 +24,7 @@ For capacity based on forks in your configuration, see link:{BaseURL}/red_hat_an
 
 [IMPORTANT]
 ====
-Ansible automation execution nodes and automation hub system requirements are different and may not meet your network's needs. The general formula for determining how much memory you need is: Total control capacity = Total Memory in MB / Fork size in MB.
+Ansible automation execution nodes and automation hub system requirements are different and might not meet your network's needs. The general formula for determining how much memory you need is: Total control capacity = Total Memory in MB / Fork size in MB.
 ====
 
 [NOTE]
